adjusting document model representation of result